--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.114 2004/12/26 13:34:56 krzyzak Exp $
+dnl $Id: configure.in,v 1.115 2005/01/05 10:48:04 krzyzak Exp $
 
 m4_define([gg2_version],[2.2.3])
 
@@ -249,7 +249,7 @@ if test x$with_all_plugins = xyes; then
 #    with_perl=yes
 fi
 
-AC_ARG_WITH(perl, [  --with-perl		  perl support])
+AC_ARG_WITH(perl, [  --with-perl		  perl support - experimental code])
 if test x$with_perl = xyes; then
     AC_PATH_PROG(perlpath, perl)
     AC_PATH_PROG(sedpath, sed)
@@ -767,7 +767,7 @@ echo Build plugin external history viewer... : $with_history_external_viewer
 echo Build plugin remote - deprecated....... : $with_remote
 echo Build plugin DBUS...................... : $with_dbus
 echo Build gghist - history viewer.......... : $with_gghist
-echo Build with perl support................ : $with_perl
+echo Build with experimental perl support... : $with_perl
 echo
 echo "*************************************************************"
 echo Remember that GNU Gadu 2 built without any plugin, 
