--- a/Makefile.am
+++ b/Makefile.am
@@ -18,6 +18,7 @@ EXTRA_DIST = \
 	contrib/remote_client/remote_client.c \
 	contrib/remote_client/remote_client.h \
 	doc/README.remote \
+	doc/README.dbus \
 	doc/problems \
 	gg2.desktop \
 	gg2.spec \
