--- a/src/plugins/docklet/dockapp/Makefile.am
+++ b/src/plugins/docklet/dockapp/Makefile.am
@@ -6,7 +6,8 @@ noinst_LIBRARIES =
 libdocklet_dockapp_plugin_la_CFLAGS = $(GTK_CFLAGS)
 
 libdocklet_dockapp_plugin_la_SOURCES = dockapp_plugin.c \
-    dockapp_plugin.h
+    dockapp_plugin.h \
+    dockapp.xpm
     
 
 libdocklet_dockapp_plugin_la_LIBADD = $(GTK_LIBS) $(top_builddir)/lib/libgg2_core.la
