--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.121 2005/03/04 22:07:05 mkobierzycki Exp $
+dnl $Id: configure.in,v 1.122 2005/03/05 13:38:28 mkobierzycki Exp $
 
 m4_define([gg2_version],[2.2.4])
 
@@ -15,7 +15,7 @@ GTK_MIN_VER="2.4.0"
 GETTEXT_PACKAGE=$PACKAGE
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
-AC_DEFINE_UNQUOTED(OS_NAME,"")
+AC_DEFINE_UNQUOTED(OS_NAME,`uname -o`)
 
 if test `uname -s` = "Darwin"; then
  	AC_DEFINE_UNQUOTED(LIB_SUFFIX,"")
