Changes within `OS_NAME' definition.

--- a/configure.in
+++ b/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.122 2005/03/05 13:38:28 mkobierzycki Exp $
+dnl $Id: configure.in,v 1.123 2005/03/06 21:43:42 mkobierzycki Exp $
 
 m4_define([gg2_version],[2.2.4])
 
@@ -15,7 +15,12 @@ GTK_MIN_VER="2.4.0"
 GETTEXT_PACKAGE=$PACKAGE
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
-AC_DEFINE_UNQUOTED(OS_NAME,`uname -o`)
+
+if test `uname -s` = "Linux"; then
+ 	AC_DEFINE_UNQUOTED(OS_NAME,`uname -o`)
+else
+	AC_DEFINE_UNQUOTED(OS_NAME,`uname -sr`)
+fi
 
 if test `uname -s` = "Darwin"; then
  	AC_DEFINE_UNQUOTED(LIB_SUFFIX,"")
