--- a/src/plugins/gadu_gadu/libgadu/configure.in
+++ b/src/plugins/gadu_gadu/libgadu/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.9 2004/09/23 08:41:26 krzyzak Exp $
+dnl $Id: configure.in,v 1.10 2005/05/07 19:05:51 krzyzak Exp $
 
 AC_INIT(lib/libgadu.h)
 AM_INIT_AUTOMAKE([libgadu],[1.5])
@@ -161,15 +161,46 @@ dnl
 dnl  Sprawdzamy OpenSSL
 dnl
 
-AC_CHECK_OPENSSL
+dnl AC_CHECK_OPENSSL
 
-if test "x$have_openssl" = "xyes"; then
-	OBJS="$OBJS simlite.o"
- 	LDFLAGS="$OPENSSL_LIBS $LDFLAGS"
- 	LIBS_LIBGADU="$LIBS_LIBGADU $OPENSSL_LIBS"
- 	CFLAGS="$CFLAGS $OPENSSL_INCLUDES"
- 	CFLAGS_LIBGADU="$CFLAGS_LIBGADU $OPENSSL_INCLUDES"
-AC_LIBGADU_DEFINE([HAVE_OPENSSL])
+dnl if test "x$have_openssl" = "xyes"; then
+dnl fi
+
+# GNUTLS
+if test "x$with_gnutls" != "xno"; then
+    with_gnutls=yes
+    AC_PATH_PROG(GNUTLS_CONFIG_SCRIPT, libgnutls-config, no)
+    
+    if test "x$GNUTLS_CONFIG_SCRIPT" != "xno"; then
+	AC_CHECK_LIB([gnutls], [gnutls_init], with_gnutls=yes, with_gnutls=no, `$GNUTLS_CONFIG_SCRIPT --libs`)
+
+	if test "x$with_gnutls" != "xno"; then
+
+	    GNUTLS_CFLAGS=`$GNUTLS_CONFIG_SCRIPT --cflags`
+	    GNUTLS_LIBS=`$GNUTLS_CONFIG_SCRIPT --libs`
+    	    
+	    AC_CHECK_HEADERS(gnutls/gnutls.h gnutls/openssl.h, have_gnutlsh=yes, have_gnutlsh=no)
+	    if test "$have_gnutlsh" = yes; then
+		with_gnutls=yes
+	        AC_SUBST(GNUTLS_LIBS)
+	        AC_SUBST(GNUTLS_CFLAGS)
+		OBJS="$OBJS simlite.o"
+ 		LDFLAGS="$GNUTLS_LIBS $LDFLAGS"
+ 		LIBS_LIBGADU="$LIBS_LIBGADU $GNUTLS_LIBS"
+ 		CFLAGS="$CFLAGS $GNUTLS_INCLUDES"
+ 		CFLAGS_LIBGADU="$CFLAGS_LIBGADU $GNUTLS_INCLUDES"
+		AC_LIBGADU_DEFINE([HAVE_GNUTLS])
+    	    else
+		with_gnutls=no
+    		AC_MSG_ERROR([*** unable to find gnutls/gnutls.h and gnutls/openssl.h headers ***])
+ 	    fi
+	 fi
+    else
+    	AC_MSG_ERROR([*** unable to find GNUTLS library (http://www.gnu.org/software/gnutls/) ***])
+	with_gnutls=no
+    fi
+else
+    with_gnutls=no
 fi
 
 dnl
