- "tlen-classic" iconset merged into "classic" iconset

--- a/pixmaps/icons/classic/Makefile.am
+++ b/pixmaps/icons/classic/Makefile.am
@@ -17,6 +17,14 @@ pixmap_DATA = \
     jabber-noauth.png \
     jabber-offline.png \
     jabber-online.png \
-    jabber-xa.png
+    jabber-xa.png \
+    tlen-away.png \
+    tlen-beback.png \
+    tlen-chat.png \
+    tlen-invisible.png \
+    tlen-occupied.png \
+    tlen-offline.png \
+    tlen-online.png
+
 
 EXTRA_DIST = $(pixmap_DATA)
