Changes within iconsets; Thanks go to Piotr Z³ocki.

--- a/pixmaps/icons/bubble/Makefile.am
+++ b/pixmaps/icons/bubble/Makefile.am
@@ -1,6 +1,7 @@
 pixmapdir   = $(pkgdatadir)/pixmaps/icons/bubble
 pixmap_DATA = \
     README \
+    gadu-gadu.png \
     gadu-gadu-away-descr.png \
     gadu-gadu-away.png \
     gadu-gadu-invisible-descr.png \
