--- a/src/plugins/docklet/dockapp/Makefile.am
+++ b/src/plugins/docklet/dockapp/Makefile.am
@@ -3,7 +3,7 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libdocklet_dockapp_plugin.la
 noinst_LIBRARIES =
 
-libdocklet_dockapp_plugin_la_CFLAGS = $(GTK_CFLAGS)
+libdocklet_dockapp_plugin_la_CFLAGS = $(GTK_CFLAGS) -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 libdocklet_dockapp_plugin_la_SOURCES = dockapp_plugin.c \
     dockapp_plugin.h \
