--- a/src/plugins/sms/Makefile.am
+++ b/src/plugins/sms/Makefile.am
@@ -3,7 +3,7 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libsms_plugin.la
 noinst_LIBRARIES =
 
-libsms_plugin_la_CFLAGS =
+libsms_plugin_la_CFLAGS = -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 libsms_plugin_la_SOURCES = sms_gui.c \
     sms_gui.h \
