--- a/src/plugins/sound/arts/Makefile.am
+++ b/src/plugins/sound/arts/Makefile.am
@@ -3,7 +3,7 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libsound_arts_plugin.la
 noinst_LIBRARIES =
 
-libsound_arts_plugin_la_CFLAGS = $(ARTSC_CFLAGS) $(AUDIOFILE_CFLAGS)
+libsound_arts_plugin_la_CFLAGS = $(ARTSC_CFLAGS) $(AUDIOFILE_CFLAGS) -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 libsound_arts_plugin_la_SOURCES = plugin_sound_arts.c sound-arts.c sound-arts.h
 
