--- a/src/plugins/sound/oss/Makefile.am
+++ b/src/plugins/sound/oss/Makefile.am
@@ -3,7 +3,7 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libsound_oss_plugin.la
 noinst_LIBRARIES =
 
-libsound_oss_plugin_la_CFLAGS = $(AUDIOFILE_CFLAGS)
+libsound_oss_plugin_la_CFLAGS = $(AUDIOFILE_CFLAGS) -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 libsound_oss_plugin_la_SOURCES = plugin_sound_oss.c
 
