--- a/src/plugins/tlen/Makefile.am
+++ b/src/plugins/tlen/Makefile.am
@@ -8,4 +8,5 @@ libtlen_plugin_la_SOURCES = tlen_plugin.c \
 
 libtlen_plugin_la_LIBADD = $(TLEN_LIBS) $(top_builddir)/lib/libgg2_core.la
     
+libtlen_plugin_la_CFLAGS = -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 libtlen_plugin_la_LDFLAGS = -avoid-version  
