--- a/src/plugins/update/Makefile.am
+++ b/src/plugins/update/Makefile.am
@@ -3,7 +3,7 @@ pkgdir = $(libdir)/gg2
 pkg_LTLIBRARIES = libupdate_plugin.la
 noinst_LIBRARIES =
 
-libupdate_plugin_la_CFLAGS = $(GTK_CFLAGS)
+libupdate_plugin_la_CFLAGS = $(GTK_CFLAGS) -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 libupdate_plugin_la_SOURCES = update_plugin.c \
     update_plugin.h
