--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -28,24 +28,7 @@ libgg2_core_la_HEADERS = gg2_core.h
 
 libgg2_core_la_LIBADD = $(PERL_OPTION_LDFLAGS) -ldl 
 libgg2_core_la_LDFLAGS = -version-info 2:2:0
+libgg2_core_la_CFLAGS = -DPACKAGE_DATA_DIR=\"$(pkgdatadir)\"
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gg2_core.pc
-
-# all:
-# 	@echo "/* This file is generated automatically. Do not edit. */" > $(top_builddir)/lib/gg2_core.h
-# 	@echo "#ifndef GG2_CORE_H" >> $(top_builddir)/lib/gg2_core.h
-# 	@echo "#define GG2_CORE_H" >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/config.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_types.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_dialog.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/perl_embed.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_repo.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_support.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_menu.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/plugins.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/ggadu_conf.h >> $(top_builddir)/lib/gg2_core.h
-# 	@cat $(top_builddir)/lib/signals.h >> $(top_builddir)/lib/gg2_core.h
-# 	@echo "#endif" >> $(top_builddir)/lib/gg2_core.h
-# 	sed -e 's/#include \"ggadu_types.h\"//g' $(top_builddir)/lib/gg2_core.h > $(top_builddir)/lib/gg2_core.h-
-# 	mv -f $(top_builddir)/lib/gg2_core.h- $(top_builddir)/lib/gg2_core.h
